--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,9 @@ footer {
   position: relative;
   display: block;
 }
+.footer__section {
+  margin-top: -7rem;
+}
 .article__five {
   position: relative;
   top: 30%;
@@ -216,6 +219,12 @@ footer {
   text-align: center;
   box-shadow: rgba(105, 105, 105, 0.15) 4.95px 4.95px 4.6px;
   background-color: var(--clr-primary-intro);
+}
+
+.form__group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .form__group .email {
@@ -233,14 +242,11 @@ footer {
 
 .footer__content {
   display: flex;
+  margin: 1rem 0;
 }
 .footer__content::before {
   content: url(../images/icon-location.svg);
-}
-
-.footer__links {
-  display: flex;
-  gap: 5rem;
+  margin-right: 1rem;
 }
 
 .footer__links a {
@@ -249,9 +255,47 @@ footer {
 
 .phone-icon::before {
   content: url(../images/icon-phone.svg);
+  margin-right: 1rem;
 }
 .email-icon::before {
   content: url(../images/icon-email.svg);
+  margin-right: 1rem;
+}
+
+.article__five-title {
+  font-size: 1.8rem;
+}
+
+.social__media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.social__media .fa-brands {
+  margin: 1rem 0;
+  font-size: 0.8rem;
+  padding: 0.8rem;
+  border-radius: 50%;
+  border: 2px solid var(--clr-accent-White);
+}
+
+.social__media .fa-facebook:hover {
+  border: 2px solid #4267b2;
+  color: #4267b2;
+}
+.social__media .fa-twitter:hover {
+  border: 2px solid #1da1f2;
+  color: #1da1f2;
+}
+.social__media .fa-instagram:hover {
+  border: 2px solid #d6249f;
+  color: #d6249f;
+}
+
+.footer__logo {
+  margin: 0 2rem 0;
 }
 
 /* media query */
@@ -286,7 +330,13 @@ footer {
 
   /* article__five */
   .article__five-container {
-    padding: 2rem;
+    position: relative;
+    top: 2.6rem;
+    /* padding: 5rem 2rem; */
+  }
+  .footer__links {
+    display: flex;
+    gap: 5rem;
   }
 }
 @media (max-width: 48rem) {
@@ -356,7 +406,31 @@ footer {
   }
 
   /* article__five */
+
   .article__five {
     width: 85%;
+    margin-top: 15rem;
+  }
+
+  .footer__links {
+    margin: 1rem 0;
+  }
+
+  .footer__container-contact,
+  .footer__links {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .article__footer-links-contacts {
+    margin: 0 1.5rem;
+  }
+
+  .footer__logo {
+    margin: 1.5rem 0;
+  }
+
+  .form__group {
+    flex-direction: column;
   }
 }
